# dungeon-game

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  AnimatedGameObject.cpp  CLAUDE.md  CMakeLists.txt  Game.cpp  Game.h  GameObject.h  NetworkManager.cpp  NetworkManager.h  README.md  RegularGameObject.h  SkeletonCode.vcxproj  SkeletonCode.vcxproj.filters  debug.h  geometry.h  main.cpp  replay.cpp  replay.h  resource_path.cpp  resource_path.h  rng.cpp  rng.h
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  building.md  contributing.md
include/: AnimatedGameObject.h  Game.h  GameObject.h  NetworkManager.h  RegularGameObject.h  ai.h  ai_difficulty.h  asset_load.h  debug.h  game_canvas.h  gamepad.h  geometry.h  key_bindings.h  letterbox.h  menu.h  menu_button.h  menu_layout.h  replay.h  resource_path.h  rng.h  screenshot.h  sprite_anim.h
src/: AnimatedGameObject.cpp  Game.cpp  NetworkManager.cpp  RegularGameObject.cpp  ai.cpp  key_bindings.cpp  main.cpp  menu.cpp  menu_button.cpp  replay.cpp  resource_path.cpp
tests/: CMakeLists.txt  test_ai.cpp  test_gamepad.cpp  test_harness.cpp  test_integration.cpp  test_loopback.cpp  test_netcode.cpp  test_unit.cpp
tests/data/: demo.replay  p1_down.replay  p1_laser.replay  p1_onto_fire.replay  p1_wrap_left.replay  p2_down.replay  p2_kill.replay  p2_left_flip.replay  p2_onto_fire.replay  p2_up.replay  p2_whiff.replay  p2_wrap_right.replay
